Retroalimentación y solución de menu responsive

--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -1,121 +1,156 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <!-- Configuracion basica del documento -->
-        <meta charset="UTF-8">
-        <title>Presupuesto - Creaciones Luz</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <!-- Configuracion basica del documento -->
+    <meta charset="UTF-8" />
+    <title>Presupuesto - Creaciones Luz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-        <!-- SEO: Descripción y palabras clave -->
-        <meta name="description" content="En Creaciones Luz diseñamos pijamas únicas con telas suaves y detalles artesanales. Confort, estilo y calidez en cada costura.">
-        <meta name="keywords" content="pijamas, ropa de dormir, ropa cómoda, moda artesanal, confección, tejidos suaves, diseño artesanal, Creaciones Luz, pijamas para mujer, pijamas para hombre, pijamas infantiles, ropa hecha a mano">
-        <meta name="author" content="Gustavo Alexander Lopez Zuluaga - AlexioKairos">
+    <!-- SEO: Descripción y palabras clave -->
+    <meta
+      name="description"
+      content="En Creaciones Luz diseñamos pijamas únicas con telas suaves y detalles artesanales. Confort, estilo y calidez en cada costura."
+    />
+    <meta
+      name="keywords"
+      content="pijamas, ropa de dormir, ropa cómoda, moda artesanal, confección, tejidos suaves, diseño artesanal, Creaciones Luz, pijamas para mujer, pijamas para hombre, pijamas infantiles, ropa hecha a mano"
+    />
+    <meta name="author" content="Gustavo Alexander Lopez Zuluaga - AlexioKairos" />
 
-        <!-- Hoja de estilo principal -->
-        <link rel="stylesheet" href="../assets/css/main.css">
+    <!-- Hoja de estilo principal -->
+    <link rel="stylesheet" href="../assets/css/main.css" />
 
-        <!-- Icono de la página -->
-        <link rel="icon" type="image/x-icon" href="../assets/favicons/maquina-de-coser.png">
-    </head>
+    <!-- Icono de la página -->
+    <link rel="icon" type="image/x-icon" href="../assets/favicons/maquina-de-coser.png" />
+  </head>
 
-    <body>
-        <!-- Cabecera -->
-        <header>
-            <!-- Frase de introducción -->
-            <div class="info-bar">
-                <p>Nos comprometemos con tu bienestar. Queremos que cada pijama que uses te haga sentir abrazado por la comodidad.</p>
-            </div>
-            
-            <nav class="menu">
-                <!-- logo de inicio -->
-                <h1 class="logo">
-                    <a href="../index.html">
-                        <img src="../assets/icons/logo.png" alt="Logo de Creaciones Luz">
-                    Creaciones Luz
-                    </a>
-                </h1>
-                <!-- Menu de navegación principal -->
-                <ul>
-                    <li><a href="portfolio.html">Productos</a></li>
-                    <li><a href="presupuesto.html">Presupuesto</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
+  <body>
+    <!-- Cabecera -->
+    <header>
+      <!-- Frase de introducción -->
+      <div class="info-bar">
+        <p>En Creaciones Luz confeccionamos pijamas de manera artesanal y a la medida para ti y tu familia.</p>
+      </div>
 
-        <!-- Contenido principal (main) -->    
-        <main class="presupuesto-container">
+      <nav class="menu">
+        <!-- logo de inicio -->
+        <h1 class="logo">
+          <img src="../assets/icons/logo.png" alt="Logo de Creaciones Luz" width="512" height="512" />
+          Creaciones Luz
+        </h1>
+        <!-- Menu de navegación principal -->
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="portfolio.html">Productos</a></li>
+          <li><a href="presupuesto.html" class="active">Presupuesto</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
 
-            <!-- Sección: Formulario de presupuesto (.presupuesto-form) -->
-            <section class="presupuesto-form">
-                <h2>Solicita tu presupuesto personalizado</h2>
-                <p>Completa el formulario y nos pondremos en contacto contigo con toda la información que necesitas.</p>
-        
-                <!-- Formulario -->
-                <form action="#" method="post" class="form">
-                    <!-- Campo: Nombre -->
-                    <label for="nombre">Nombre completo</label>
-                    <input type="text" id="nombre" name="nombre" maxlength="50" pattern="[A-Za-z\s]+" autocomplete="name" required>
+    <!-- Contenido principal (main) -->
+    <main class="presupuesto-container">
+      <!-- Sección: Formulario de presupuesto (.presupuesto-form) -->
+      <section class="presupuesto-form">
+        <h2>Solicita tu presupuesto personalizado</h2>
+        <p>Completa el formulario y nos pondremos en contacto contigo con toda la información que necesitas.</p>
 
-                    <!-- Campo: Correo -->
-                    <label for="email">Correo electrónico</label>
-                    <input type="email" id="email" name="email" autocomplete="email" maxlength="50" placeholder="example@gmail.com" required>
+        <!-- Formulario -->
+        <form action="#" method="post" class="form">
+          <!-- Campo: Nombre -->
+          <label for="nombre">Nombre completo</label>
+          <input
+            type="text"
+            id="nombre"
+            name="nombre"
+            maxlength="50"
+            pattern="[A-Za-z\s]+"
+            autocomplete="name"
+            required
+          />
 
-                    <!-- Campo: Teléfono -->
-                    <label for="telefono">Teléfono</label>
-                    <input type="tel" id="telefono" name="telefono" required pattern="[0-9]{9}" autocomplete="tel" placeholder="Ingrese su numero de teléfono">
+          <!-- Campo: Correo -->
+          <label for="email">Correo electrónico</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            autocomplete="email"
+            maxlength="50"
+            placeholder="example@gmail.com"
+            required
+          />
 
-                    <!-- Campo: Mensaje -->
-                    <label for="mensaje">Solicita más información</label>
-                    <textarea id="mensaje" name="mensaje" rows="5" maxlength="500" required></textarea>
+          <!-- Campo: Teléfono -->
+          <label for="telefono">Teléfono</label>
+          <input
+            type="tel"
+            id="telefono"
+            name="telefono"
+            required
+            pattern="[0-9]{9}"
+            autocomplete="tel"
+            placeholder="Ingrese su numero de teléfono"
+          />
 
-                    <!-- Checkbox: Aceptación de privacidad -->
-                    <div class="checkbox">
-                        <input type="checkbox" id="privacidad" required>
-                        <label for="privacidad">Acepto la Política de Privacidad.</label>
-                    </div>
+          <!-- Campo: Mensaje -->
+          <label for="mensaje">Solicita más información</label>
+          <textarea id="mensaje" name="mensaje" rows="5" maxlength="500" required></textarea>
 
-                    <!-- Botón enviar -->
-                    <button type="submit" class="btn-submit">Enviar solicitud</button>
+          <!-- Checkbox: Aceptación de privacidad -->
+          <div class="checkbox">
+            <input type="checkbox" id="privacidad" required />
+            <label for="privacidad">Acepto la Política de Privacidad.</label>
+          </div>
 
-                </form>
-            </section>
-        </main>
+          <!-- Botón enviar -->
+          <button type="submit" class="btn-submit">Enviar solicitud</button>
+        </form>
+      </section>
+    </main>
 
-       <footer>
-            <div class="footer-content">
-                <!--Marca y descripción-->
-                <div class="brand">
-                    <img src="../assets/icons/logo.png" alt="Logo de Creaciones Luz">
-                    <h2>Creaciones Luz</h2>
-                    <p>Confort, estilo y calidez en cada costura.</p>
-                </div>
+    <footer>
+      <div class="footer-content">
+        <!--Marca y descripción-->
+        <div class="brand">
+          <img src="../assets/icons/logo.png" alt="Logo de Creaciones Luz" width="512" height="512" />
+          <h2>Creaciones Luz</h2>
+          <p>Confort, estilo y calidez en cada costura.</p>
+        </div>
 
-                <!--Redes sociales y Contacto-->
-                <div class="social-links">
-                    <a href="#" aria-label="Facebook de Creaciones Luz" title="Facebook">
-                        <img src="../assets/icons/facebook.png" alt="Facebook" width="512" height="512"> Facebook
-                    </a>
-                    <a href="#" aria-label="Instagram de Creaciones Luz" title="Instagram">
-                        <img src="../assets/icons/instagram.png" alt="Instagram" width="512" height="512"> Instagram
-                    </a>
-                    <a href="#" aria-label="Whatsapp de Creaciones Luz" title="Whatsapp">
-                        <img src="../assets/icons/whatsapp.png" alt="whatsapp" width="512" height="512"> WhatsApp
-                    </a>
-                    <a href="#" aria-label="Teléfono de Creaciones Luz" title="telefono">
-                        <img src="../assets/icons/telefono.png" alt="telefono" width="512" height="512">+34 642 698 457
-                    </a>
-                    <a href="#" aria-label="Email de Creaciones Luz" title="email">
-                        <img src="../assets/icons/email.png" alt="email" width="512" height="512"> info@creacionesluz.com
-                    </a>
-                </div>
-            </div>
+        <!--Redes sociales y Contacto-->
+        <div class="social-links">
+          <a href="#" aria-label="Facebook de Creaciones Luz" title="Facebook">
+            <img src="../assets/icons/facebook.png" alt="Facebook" width="512" height="512" />
+            Facebook
+          </a>
+          <a href="#" aria-label="Instagram de Creaciones Luz" title="Instagram">
+            <img src="../assets/icons/instagram.png" alt="Instagram" width="512" height="512" />
+            Instagram
+          </a>
+          <a href="#" aria-label="Whatsapp de Creaciones Luz" title="Whatsapp">
+            <img src="../assets/icons/whatsapp.png" alt="whatsapp" width="512" height="512" />
+            WhatsApp
+          </a>
+          <a href="#" aria-label="Teléfono de Creaciones Luz" title="telefono">
+            <img src="../assets/icons/telefono.png" alt="telefono" width="512" height="512" />
+            +34 642 698 457
+          </a>
+          <a href="#" aria-label="Email de Creaciones Luz" title="email">
+            <img src="../assets/icons/email.png" alt="email" width="512" height="512" />
+            info@creacionesluz.com
+          </a>
+        </div>
+      </div>
 
-            <!-- copyright o derechos de autor -->
-            <div class="copyright">
-                <p>&copy; 2025 Creaciones Luz | Diseñado por <strong>AlexioKairos</strong></p>
-            </div>
-        </footer>
-    </body>
+      <!-- copyright o derechos de autor -->
+      <div class="copyright">
+        <p>
+          &copy; 2025 Creaciones Luz | Diseñado por
+          <strong>AlexioKairos</strong>
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
