--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,112 +1,138 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <!-- Configuracion basica del documento -->
-        <meta charset="UTF-8">
-        <title>Contacto - Creaciones Luz</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <!-- Configuracion basica del documento -->
+    <meta charset="UTF-8" />
+    <title>Contacto - Creaciones Luz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-        <!-- SEO: Descripción y palabras clave -->
-        <meta name="description" content="En Creaciones Luz diseñamos pijamas únicas con telas suaves y detalles artesanales. Confort, estilo y calidez en cada costura.">
-        <meta name="keywords" content="pijamas, ropa de dormir, ropa cómoda, moda artesanal, confección, tejidos suaves, diseño artesanal, Creaciones Luz, pijamas para mujer, pijamas para hombre, pijamas infantiles, ropa hecha a mano">
-        <meta name="author" content="Gustavo Alexander Lopez Zuluaga - AlexioKairos">
+    <!-- SEO: Descripción y palabras clave -->
+    <meta
+      name="description"
+      content="En Creaciones Luz diseñamos pijamas únicas con telas suaves y detalles artesanales. Confort, estilo y calidez en cada costura."
+    />
+    <meta
+      name="keywords"
+      content="pijamas, ropa de dormir, ropa cómoda, moda artesanal, confección, tejidos suaves, diseño artesanal, Creaciones Luz, pijamas para mujer, pijamas para hombre, pijamas infantiles, ropa hecha a mano"
+    />
+    <meta name="author" content="Gustavo Alexander Lopez Zuluaga - AlexioKairos" />
 
-        <!-- Hoja de estilo principal -->
-        <link rel="stylesheet" href="../assets/css/main.css">
+    <!-- Hoja de estilo principal -->
+    <link rel="stylesheet" href="../assets/css/main.css" />
 
-        <!-- Icono de la página -->
-        <link rel="icon" type="image/x-icon" href="../assets/favicons/maquina-de-coser.png">
-    </head>
+    <!-- Icono de la página -->
+    <link rel="icon" type="image/x-icon" href="../assets/favicons/maquina-de-coser.png" />
+  </head>
 
-    <body>
-        <!-- Cabecera -->
-        <header>
-            <!-- Frase de introducción -->
-            <div class="info-bar">
-                <p>Nuestra prioridad es la calidad: seleccionamos telas suaves y resistentes para que disfrutes ropa creada para acompañar tus mejores momentos.</p>
-            </div>
-            
-            <nav class="menu">
-                <!-- logo de inicio -->
-                <h1 class="logo">
-                    <a href="../index.html">
-                        <img src="../assets/icons/logo.png" alt="Logo de Creaciones Luz">
-                    Creaciones Luz
-                    </a>
-                </h1>
-                <!-- Menu de navegación principal -->
-                <ul>
-                    <li><a href="portfolio.html">Productos</a></li>
-                    <li><a href="presupuesto.html">Presupuesto</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
+  <body>
+    <!-- Cabecera -->
+    <header>
+      <!-- Frase de introducción -->
+      <div class="info-bar">
+        <p>En Creaciones Luz confeccionamos pijamas de manera artesanal y a la medida para ti y tu familia.</p>
+      </div>
 
-         <!-- Contenido principal  -->
-        <main class="contacto-container">
-            <section class="contacto-info">
-            <!-- Sección: Información de contacto -->
-                <h2>Contacto</h2>    
-                <p>Estamos listos para ayudarte. Puedes comunicarte con nosotros mediante:</p>
-                <address>
-                    <ul>
-                        <li><strong>Dirección:</strong> Calle la Roda, 49, 02006 Albacete</li>
-                        <li><strong>Teléfono:</strong><a href="tel:+34642698457"></a> +34 642 698 457</li>
-                        <li><strong>Email:</strong> <a href="mailto:creacionesluz@taller.com"></a> creacionesluz@taller.com</li>
-                    </ul>
-                </address>
-            </section>
+      <nav class="menu">
+        <!-- logo de inicio -->
+        <h1 class="logo">
+          <img src="../assets/icons/logo.png" alt="Logo de Creaciones Luz" width="512" height="512" />
+          Creaciones Luz
+        </h1>
+        <!-- Menu de navegación principal -->
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="portfolio.html">Productos</a></li>
+          <li><a href="presupuesto.html">Presupuesto</a></li>
+          <li><a href="contacto.html" class="active">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
 
-            <!-- Sección: Mapa / ubicación -->
-            <section class="contacto-mapa">
-                <h3>Ubicación de la empresa</h3>
+    <!-- Contenido principal  -->
+    <main class="contacto-container">
+      <section class="contacto-info">
+        <!-- Sección: Información de contacto -->
+        <h2>Contacto</h2>
+        <p>Estamos listos para ayudarte. Puedes comunicarte con nosotros mediante:</p>
+        <address>
+          <ul>
+            <li>
+              <span>Dirección:</span>
+              Calle la Roda, 49, 02006 Albacete
+            </li>
+            <li>
+              <span>Teléfono:</span>
+              <a href="tel:+34642698457"></a>
+              +34 642 698 457
+            </li>
+            <li>
+              <span>Email:</span>
+              <a href="mailto:creacionesluz@taller.com"></a>
+              creacionesluz@taller.com
+            </li>
+          </ul>
+        </address>
+      </section>
 
-                <!--Iframe: ubicación en mapa (Google Maps iframe)-->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1489.7144446243449!2d-1.866705!3d39.002905!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd665fb217acaa95%3A0x9ac291948606e5fd!2sC.%20la%20Roda%2C%2049%2C%2002006%20Albacete!5e1!3m2!1ses!2ses!4v1762808559122!5m2!1ses!2ses" 
-                width="600" 
-                height="450" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </section>
-        </main>
+      <!-- Sección: Mapa / ubicación -->
+      <section class="contacto-mapa">
+        <h3>Ubicación de la empresa</h3>
 
-        <footer>
-            <div class="footer-content">
-                <!--Marca y descripción-->
-                <div class="brand">
-                    <img src="../assets/icons/logo.png" alt="Logo de Creaciones Luz">
-                    <h2>Creaciones Luz</h2>
-                    <p>Confort, estilo y calidez en cada costura.</p>
-                </div>
+        <!--Iframe: ubicación en mapa (Google Maps iframe)-->
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1489.7144446243449!2d-1.866705!3d39.002905!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd665fb217acaa95%3A0x9ac291948606e5fd!2sC.%20la%20Roda%2C%2049%2C%2002006%20Albacete!5e1!3m2!1ses!2ses!4v1762808559122!5m2!1ses!2ses"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </section>
+    </main>
 
-                <!--Redes sociales y Contacto-->
-                <div class="social-links">
-                    <a href="#" aria-label="Facebook de Creaciones Luz" title="Facebook">
-                        <img src="../assets/icons/facebook.png" alt="Facebook" width="512" height="512"> Facebook
-                    </a>
-                    <a href="#" aria-label="Instagram de Creaciones Luz" title="Instagram">
-                        <img src="../assets/icons/instagram.png" alt="Instagram" width="512" height="512"> Instagram
-                    </a>
-                    <a href="#" aria-label="Whatsapp de Creaciones Luz" title="Whatsapp">
-                        <img src="../assets/icons/whatsapp.png" alt="whatsapp" width="512" height="512"> WhatsApp
-                    </a>
-                    <a href="#" aria-label="Teléfono de Creaciones Luz" title="telefono">
-                        <img src="../assets/icons/telefono.png" alt="telefono" width="512" height="512">+34 642 698 457
-                    </a>
-                    <a href="#" aria-label="Email de Creaciones Luz" title="email">
-                        <img src="../assets/icons/email.png" alt="email" width="512" height="512"> info@creacionesluz.com
-                    </a>
-                </div>
-            </div>
+    <footer>
+      <div class="footer-content">
+        <!--Marca y descripción-->
+        <div class="brand">
+          <img src="../assets/icons/logo.png" alt="Logo de Creaciones Luz" width="512" height="512" />
+          <h2>Creaciones Luz</h2>
+          <p>Confort, estilo y calidez en cada costura.</p>
+        </div>
 
-            <!-- copyright o derechos de autor -->
-            <div class="copyright">
-                <p>&copy; 2025 Creaciones Luz | Diseñado por <strong>AlexioKairos</strong></p>
-            </div>
-        </footer>
-    </body>
+        <!--Redes sociales y Contacto-->
+        <div class="social-links">
+          <a href="#" aria-label="Facebook de Creaciones Luz" title="Facebook">
+            <img src="../assets/icons/facebook.png" alt="Facebook" width="512" height="512" />
+            Facebook
+          </a>
+          <a href="#" aria-label="Instagram de Creaciones Luz" title="Instagram">
+            <img src="../assets/icons/instagram.png" alt="Instagram" width="512" height="512" />
+            Instagram
+          </a>
+          <a href="#" aria-label="Whatsapp de Creaciones Luz" title="Whatsapp">
+            <img src="../assets/icons/whatsapp.png" alt="whatsapp" width="512" height="512" />
+            WhatsApp
+          </a>
+          <a href="#" aria-label="Teléfono de Creaciones Luz" title="telefono">
+            <img src="../assets/icons/telefono.png" alt="telefono" width="512" height="512" />
+            +34 642 698 457
+          </a>
+          <a href="#" aria-label="Email de Creaciones Luz" title="email">
+            <img src="../assets/icons/email.png" alt="email" width="512" height="512" />
+            info@creacionesluz.com
+          </a>
+        </div>
+      </div>
+
+      <!-- copyright o derechos de autor -->
+      <div class="copyright">
+        <p>
+          &copy; 2025 Creaciones Luz | Diseñado por
+          <strong>AlexioKairos</strong>
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
