--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -30,7 +30,10 @@
     <header>
       <!-- Frase de introducción -->
       <div class="info-bar">
-        <p>En Creaciones Luz confeccionamos pijamas de manera artesanal y a la medida para ti y tu familia.</p>
+        <p>
+          Nos comprometemos con tu bienestar. Queremos que cada pijama que uses te haga sentir abrazado por la
+          comodidad.
+        </p>
       </div>
 
       <nav class="menu">
