--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -30,7 +30,10 @@
     <header>
       <!-- Frase de introducción -->
       <div class="info-bar">
-        <p>En Creaciones Luz confeccionamos pijamas de manera artesanal y a la medida para ti y tu familia.</p>
+        <p>
+          Nuestra prioridad es la calidad: seleccionamos telas suaves y resistentes para que disfrutes ropa creada para
+          acompañar tus mejores momentos.
+        </p>
       </div>
 
       <nav class="menu">
